--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" />
-    <link rel="stylesheet" href="iyke.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <section id="welcome-section">
